--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -3,8 +3,32 @@ html, body {
   height: 100%;
   min-height: 100%;
 }
-/* body {
-  padding-top: calc(env(safe-area-inset-top, 0px) + 1rem);
-} */
+body{
+    padding-top: 4rem; 
+}
 
+/* Chrome, Edge, Safari */
+::-webkit-scrollbar {
+  width: 12px;           
+  height: 12px;          
+}
 
+::-webkit-scrollbar-track {
+  background: #f0f0f0;     
+  border-radius: 10px;      
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #6a11cb, #333286); 
+  border-radius: 10px;
+  border: 3px solid #f0f0f0; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #2575fc, #6a11cb); 
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin;           
+  scrollbar-color: #6a11cb #f0f0f0;
