--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,6 +5,7 @@
       <% if user_signed_in? %>
         <span class="text-gray-700 font-medium">Hello, <%= current_user.username %>!</span>
         <%= link_to "Dashboard", dashboard_path, class: "text-gray-700 hover:text-indigo-600 font-medium" %>
+        <%= link_to "Profile", profile_path(current_user.username), class: "text-gray-700 hover:text-indigo-600 font-medium" %>
         <%= link_to "New Post", new_post_path, class: "text-white bg-indigo-600 px-3 py-1 rounded-md hover:bg-indigo-700" %>
         <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete, confirm: "Are you sure?" }, class: "text-gray-700 hover:text-indigo-600 font-medium" %>
       <% else %>
