Added search functionality, changed email privacy, minor style changes

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -130,7 +130,7 @@
               </svg>
               <div>
                 <p class="text-sm text-gray-500">Email</p>
-                <p class="text-gray-900 font-medium"><%= @is_own_profile ? @user.email : "[hidden]" %></p>
+                <p class="text-gray-900 font-medium"><%= @user.email %></p>
               </div>
             </div>
 
