--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,20 @@
 <nav class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
   <div class="max-w-6xl mx-auto px-4 py-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-indigo-600"><%= link_to "FakeBooth", root_path %></h1>
-    <div class="flex space-x-4">
+    <div class="flex-1 mx-6">
+      <% if user_signed_in? %>
+        <%= form_with url: search_path, method: :get, local: true, class: "w-full" do |f| %>
+          <div class="relative">
+            <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </span>
+            <%= f.text_field :q, value: params[:q], placeholder: "Search FakeBooth...", class: "w-full pl-9 pr-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500" %>
+            <%= f.hidden_field :type, value: "users" %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+    <div class="flex items-center space-x-4">
       <% if user_signed_in? %>
         <span class="text-gray-700 font-medium">Hello, <%= current_user.username %>!</span>
         <%= link_to "Dashboard", dashboard_path, class: "text-gray-700 hover:text-indigo-600 font-medium" %>
