--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -124,15 +124,17 @@
               </div>
             </div>
 
-            <div class="flex items-start">
-              <svg class="w-5 h-5 text-gray-500 mr-3 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
-              </svg>
-              <div>
-                <p class="text-sm text-gray-500">Email</p>
-                <p class="text-gray-900 font-medium"><%= @user.email %></p>
+            <% if @is_own_profile %>
+              <div class="flex items-start">
+                <svg class="w-5 h-5 text-gray-500 mr-3 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                </svg>
+                <div>
+                  <p class="text-sm text-gray-500">Email</p>
+                  <p class="text-gray-900 font-medium"><%= @user.email %></p>
+                </div>
               </div>
-            </div>
+            <% end %>
 
             <div class="flex items-start">
               <svg class="w-5 h-5 text-gray-500 mr-3 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
